fud2/fud-core/tests/flang/snapshots/tests__plan_files__double_semicolon.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.msg()
---
no variables found to assign to
