fud2/fud-core/tests/flang/snapshots/tests__plan_files__empty_file.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [],
}
