fud2/fud-core/tests/flang/snapshots/tests__plan_files__missing_arguments.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.to_string()
---
expected ( but found ;
