fud2/fud-core/tests/flang/snapshots/tests__plan_files__no_args.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "x",
            ],
            value: Op {
                name: "input",
                args: [],
            },
        },
    ],
}
