fud2/fud-core/tests/flang/snapshots/tests__plan_files__total_gibberish.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.to_string()
---
id cannot start with !
