fud2/fud-core/tests/flang/snapshots/tests__plan_files__trailing_comma.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.msg()
---
expected Id("<id>") but found Assign
