fud2/fud-core/tests/flang/snapshots/tests__plan_files__weird_whitespace.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "a",
                "b",
                "c",
            ],
            value: Op {
                name: "wah",
                args: [
                    "c",
                    "d",
                ],
            },
        },
        Assignment {
            vars: [
                "e",
                "f",
            ],
            value: Op {
                name: "g",
                args: [
                    "h",
                    "i",
                ],
            },
        },
    ],
}
